# Ragnite

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  repo-metadata.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.py
docker/: Dockerfile  docker-compose.yml
docs/: agent-loop.md  architecture.md  claude-code.md  code-memory.md  confidence-policy.md  deployment.md  hooks.md  invoke-mode.md  memory.md  security.md  semantic-cache.md
examples/: quickstart.py
examples/data/: jupiter.md  mars.md  rag.md
src/ragnite/: __init__.py  cli.py  config.py  errors.py  types.py
src/ragnite/claude/: __init__.py  bootstrap.py  hooks.py  installer.py  redact.py  session.py
src/ragnite/embed/: __init__.py  base.py  cache.py  fake.py  local.py  openai_compat.py  voyage.py
src/ragnite/eval/: __init__.py  metrics.py  runner.py
src/ragnite/ingest/: __init__.py  chunkers.py  loaders.py
src/ragnite/llm/: __init__.py  anthropic.py  base.py  openai_compat.py
src/ragnite/memory/: __init__.py  bank.py  code_index.py  engine.py  packer.py  scorer.py  semcache.py  types.py
src/ragnite/rag/: __init__.py  contextual.py  engine.py  memory.py  prompts.py
src/ragnite/retrieve/: __init__.py  bm25.py  hybrid.py  rerank.py  retriever.py
src/ragnite/server/: __init__.py  app.py  mcp.py
src/ragnite/store/: __init__.py  base.py  native.py  qdrant.py
tests/: conftest.py  test_bm25.py  test_chunkers.py  test_claude_hooks.py  test_claude_installer.py  test_code_memory.py  test_confidence.py  test_engine.py  test_eval.py  test_hybrid.py  test_loaders.py  test_mcp_contract.py  test_memory.py  test_memory_engine.py  test_native_store.py  test_packer.py  test_redact.py  test_semcache.py  test_server.py
