[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragnite"
version = "0.2.0"
description = "Confidence-aware RAG memory engine for LLMs and coding agents: typed memory (fact/decision/episode/code), confidence scoring, answer modes, context packing, semantic cache, hybrid retrieval, MCP server."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "sunamebr" }]
keywords = [
    "rag", "retrieval", "llm", "embeddings", "vector-search", "mcp", "anthropic", "claude",
    "memory", "agent-memory", "semantic-cache", "confidence", "coding-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
mcp = ["mcp>=1.2"]
qdrant = ["qdrant-client>=1.12"]
local = ["sentence-transformers>=3.0"]
pdf = ["pypdf>=4.2"]
docx = ["python-docx>=1.1"]
all = [
    "ragnite[anthropic,server,mcp,qdrant,pdf,docx]",
]

[project.scripts]
ragnite = "ragnite.cli:app"

[project.urls]
Homepage = "https://github.com/sunamebr/Ragnite"
Repository = "https://github.com/sunamebr/Ragnite"
Issues = "https://github.com/sunamebr/Ragnite/issues"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ragnite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
